--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,112 +1,112 @@
 <!DOCTYPE html>
 <html lang="br">
-  <head>
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<head>
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
-    <title>E-Fruit</title>
-  </head>
-  <body class="login">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8">
+  <title>E-Fruit</title>
+</head>
+<body class="login">
 
-    <div class="container ">
-      <div class="row background-card mt-3">
-        <div class="col-12 ">
-          <div class="row">
-            <div class="col-12 centralize-container">
-              <img src="img/logo_fundobranco.png" alt="">
-            </div>
-
+  <div class="container ">
+    <div class="row background-card mt-3">
+      <div class="col-12 ">
+        <div class="row">
+          <div class="col-12 centralize-container">
+            <img class="img-fluid" src="img/logo_fundobranco.png" alt="">
           </div>
-          <div class="row">
-            <div class="col-12 centralize-container">
-              <span class="login-text">LOGIN</span>
-            </div>
 
+        </div>
+        <div class="row">
+          <div class="col-12 centralize-container">
+            <span class="login-text">LOGIN</span>
           </div>
-          <div class="row">
-            <div class="col-12 centralize-container">
-                <form onsubmit="login(event)">
-                  <div class="form-group">
-                    <label for="email">Email</label>
-                    <input
-                      type="email"
-                      name="email"
-                      class="form-control"
-                      id="email"
-                      aria-describedby="emailHelp"
-                      placeholder="email@example.com"
-                      autocomplete="username"
-                      required
-                    >
-                  </div>
-                  <div class="form-group">
-                    <label for="password">Senha</label>
-                    <input
-                      type="password"
-                      name="password"
-                      class="form-control"
-                      id="password"
-                      placeholder="Senha"
-                      autocomplete="current-password"
-                      required
-                    >
-                  </div>
 
-                  <div class="col-12 centralize-container">
-                      <a class="forgot-password" href="#"><u>Esqueci minha senha</u></a>
-                  </div>
-                  <div class="col-12 centralize-container mt-5">
-                    <button type="submit" class="btn orange-button" href="#">LOGIN</button>
-                  </div>
-              </form>
-            </div>
-            <div class="col-12 centralize-container mt-4">
-              <button id="signup-button" type="button" class="btn signup-button">CADASTRAR-SE</button>
-            </div>
+        </div>
+        <div class="row">
+          <div class="col-12 centralize-container">
+            <form onsubmit="login(event)">
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input
+                type="email"
+                name="email"
+                class="form-control"
+                id="email"
+                aria-describedby="emailHelp"
+                placeholder="email@example.com"
+                autocomplete="username"
+                required
+                >
+              </div>
+              <div class="form-group">
+                <label for="password">Senha</label>
+                <input
+                type="password"
+                name="password"
+                class="form-control"
+                id="password"
+                placeholder="Senha"
+                autocomplete="current-password"
+                required
+                >
+              </div>
+
+              <div class="col-12 centralize-container">
+                <a class="forgot-password" href="#"><u>Esqueci minha senha</u></a>
+              </div>
+              <div class="col-12 centralize-container mt-5">
+                <button type="submit" class="btn orange-button" href="#">LOGIN</button>
+              </div>
+            </form>
+          </div>
+          <div class="col-12 centralize-container mt-4">
+            <button id="signup-button" type="button" class="btn signup-button">CADASTRAR-SE</button>
           </div>
         </div>
-
       </div>
+
     </div>
+  </div>
 
-    <script>
-      window.onload = () => {
-        const user = localStorage.getItem("efruit:user");
+  <script>
+  window.onload = () => {
+    const user = localStorage.getItem("efruit:user");
 
-        if (user) {
-          window.location.href = "products-page.html";
-        }
-      };
+    if (user) {
+      window.location.href = "products-page.html";
+    }
+  };
 
-      const signUpButton = document.getElementById("signup-button");
+  const signUpButton = document.getElementById("signup-button");
 
-      signUpButton.onclick = (event) => {
-        window.location.href = 'signup.html';
-      };
+  signUpButton.onclick = (event) => {
+    window.location.href = 'signup.html';
+  };
 
-      function login(event) {
-        event.preventDefault();
+  function login(event) {
+    event.preventDefault();
 
-        const email = document.getElementById("email").value;
-        const password = document.getElementById("password").value;
+    const email = document.getElementById("email").value;
+    const password = document.getElementById("password").value;
 
-        const users = JSON.parse(localStorage.getItem("efruit:users")) || [];
-        const user = users.find(user => user.email === email);
+    const users = JSON.parse(localStorage.getItem("efruit:users")) || [];
+    const user = users.find(user => user.email === email);
 
-        if (user && user.password === password) {
-          localStorage.setItem("efruit:user", JSON.stringify({
-            email
-          }));
-          window.location.href = 'products-page.html';
-        } else {
-          alert('Usuário e/ou senha incorretos');
-        }
-      }
-    </script>
-  </body>
+    if (user && user.password === password) {
+      localStorage.setItem("efruit:user", JSON.stringify({
+        email
+      }));
+      window.location.href = 'products-page.html';
+    } else {
+      alert('Usuário e/ou senha incorretos');
+    }
+  }
+  </script>
+</body>
 </html>
