--- a/frontend/products-page.html
+++ b/frontend/products-page.html
@@ -105,11 +105,11 @@
   </nav>
   <div class="container-fluid ">
     <div class="row slider-fruit">
-      <div class="col-4 d-flex justify-content-center align-items-center" style="line-height: 50px;flex-direction:column;">
+      <div class="display-none-720 col-4 d-flex justify-content-center align-items-center" style="line-height: 50px;flex-direction:column;">
         <p class="left-slider">E-FRUIT</p>
         <p class="left-slider">FRIDAY</p>
       </div>
-      <div class="col-4">
+      <div class="col-md-4 col-12">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -129,7 +129,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4 d-flex justify-content-center align-items-center flex-column" style="line-height: 30px;">
+      <div class="display-none-720 col-4 d-flex justify-content-center align-items-center flex-column" style="line-height: 30px;">
         <p class="left-slider">50%</p>
         <p class="text-center" style="font-size:22px;color: #8E8E8E;">EM TODAS AS<br>FRUTAS VERMELHAS</p>
       </div>
@@ -137,33 +137,12 @@
     </div>
     <hr>
     <div class="row" style="height:300px">
-      <div class="col-2" style="border:2px solid blue">
+      <div class="col-2 d-none d-lg-block" style="border:2px solid blue">
 
       </div>
-      <div class="offset-1 col-9">
+      <div class="offset-lg-1 col-lg-9 col-12">
         <div class="row mb-5 mt-4">
-          <div class="col-12 flex-row d-flex align-items-center justify-content-around">
-            <div class="card d-flex align-items-center" style="width: 18rem;">
-              <img class="card-img-top" src="img\apple.png" alt="Card image cap">
-              <div class="card-body text-center">
-                <h5 class="card-title">Maça Fuji</h5>
-                <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
-              </div>
-              <div class="card-body">
-                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
-              </div>
-            </div>
-
-            <div class="card d-flex align-items-center" style="width: 18rem;">
-              <img class="card-img-top" src="img\apple.png" alt="Card image cap">
-              <div class="card-body text-center">
-                <h5 class="card-title">Maça Fuji</h5>
-                <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
-              </div>
-              <div class="card-body">
-                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
-              </div>
-            </div>
+          <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
             <div class="card d-flex align-items-center" style="width: 18rem;">
               <img class="card-img-top" src="img\apple.png" alt="Card image cap">
               <div class="card-body text-center">
@@ -175,30 +154,7 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="row mb-5">
-          <div class="col-12 flex-row d-flex align-items-center justify-content-around">
-            <div class="card d-flex align-items-center" style="width: 18rem;">
-              <img class="card-img-top" src="img\apple.png" alt="Card image cap">
-              <div class="card-body text-center">
-                <h5 class="card-title">Maça Fuji</h5>
-                <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
-              </div>
-              <div class="card-body">
-                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
-              </div>
-            </div>
-
-            <div class="card d-flex align-items-center" style="width: 18rem;">
-              <img class="card-img-top" src="img\apple.png" alt="Card image cap">
-              <div class="card-body text-center">
-                <h5 class="card-title">Maça Fuji</h5>
-                <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
-              </div>
-              <div class="card-body">
-                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
-              </div>
-            </div>
+          <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
             <div class="card d-flex align-items-center" style="width: 18rem;">
               <img class="card-img-top" src="img\apple.png" alt="Card image cap">
               <div class="card-body text-center">
@@ -210,30 +166,7 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="row mb-5">
-          <div class="col-12 flex-row d-flex align-items-center justify-content-around">
-            <div class="card d-flex align-items-center" style="width: 18rem;">
-              <img class="card-img-top" src="img\apple.png" alt="Card image cap">
-              <div class="card-body text-center">
-                <h5 class="card-title">Maça Fuji</h5>
-                <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
-              </div>
-              <div class="card-body">
-                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
-              </div>
-            </div>
-
-            <div class="card d-flex align-items-center" style="width: 18rem;">
-              <img class="card-img-top" src="img\apple.png" alt="Card image cap">
-              <div class="card-body text-center">
-                <h5 class="card-title">Maça Fuji</h5>
-                <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
-              </div>
-              <div class="card-body">
-                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
-              </div>
-            </div>
+          <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
             <div class="card d-flex align-items-center" style="width: 18rem;">
               <img class="card-img-top" src="img\apple.png" alt="Card image cap">
               <div class="card-body text-center">
@@ -245,9 +178,7 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="row mb-5">
-          <div class="col-12 flex-row d-flex align-items-center justify-content-around">
+          <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
             <div class="card d-flex align-items-center" style="width: 18rem;">
               <img class="card-img-top" src="img\apple.png" alt="Card image cap">
               <div class="card-body text-center">
@@ -258,7 +189,8 @@
                 <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
               </div>
             </div>
-
+          </div>
+          <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
             <div class="card d-flex align-items-center" style="width: 18rem;">
               <img class="card-img-top" src="img\apple.png" alt="Card image cap">
               <div class="card-body text-center">
@@ -269,6 +201,32 @@
                 <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
               </div>
             </div>
+          </div>
+          <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
+            <div class="card d-flex align-items-center" style="width: 18rem;">
+              <img class="card-img-top" src="img\apple.png" alt="Card image cap">
+              <div class="card-body text-center">
+                <h5 class="card-title">Maça Fuji</h5>
+                <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
+              </div>
+              <div class="card-body">
+                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
+            <div class="card d-flex align-items-center" style="width: 18rem;">
+              <img class="card-img-top" src="img\apple.png" alt="Card image cap">
+              <div class="card-body text-center">
+                <h5 class="card-title">Maça Fuji</h5>
+                <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
+              </div>
+              <div class="card-body">
+                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
             <div class="card d-flex align-items-center" style="width: 18rem;">
               <img class="card-img-top" src="img\apple.png" alt="Card image cap">
               <div class="card-body text-center">
