--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="br">
   <head>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -18,7 +20,7 @@
         <div class="col-12 ">
           <div class="row">
             <div class="col-12 centralize-container">
-              <img src="img/logo_fundobranco.png" alt="">
+              <img class="img-fluid" src="img/logo_fundobranco.png" alt="">
             </div>
 
           </div>
@@ -179,7 +181,7 @@
                 alert("Senhas não correspondem");
                 passwordConfirmationInput.focus();
                 break;
-            
+
               default:
                 break;
             }
