--- a/frontend/products-page.html
+++ b/frontend/products-page.html
@@ -6,6 +6,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+  <script src='api.js'></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -37,8 +38,8 @@
     <div class='product-container'>
       <strong>Página do Produto</strong>
       <div class='product-info'>
-        <img class='product-image' src='img\apple.png' alt='Apple' />
-        <strong id=product-name> Maça Fuji </strong>
+        <img id='modal-product-img' class='product-image' src='img\apple.png' alt='Apple' />
+        <strong id='product-name'> Maça Fuji </strong>
         <div class="item-prop-container">
           <div class='align-item-prop'>
             <span>
@@ -499,115 +500,7 @@
     class="row"
     >
     <div class="col-lg-9 col-12">
-      <div class="row mb-5 mt-4">
-        <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
-          <div class="card d-flex align-items-center">
-            <img class="card-img-top" src="img\apple.png" alt="Card image cap">
-            <div class="card-body text-center">
-              <h5 class="card-title">Maça Fuji</h5>
-              <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
-            </div>
-            <div class="card-body">
-              <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
-          <div class="card d-flex align-items-center">
-            <img class="card-img-top" src="img\apple.png" alt="Card image cap">
-            <div class="card-body text-center">
-              <h5 class="card-title">Maça Fuji</h5>
-              <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
-            </div>
-            <div class="card-body">
-              <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
-          <div class="card d-flex align-items-center">
-            <img class="card-img-top" src="img\apple.png" alt="Card image cap">
-            <div class="card-body text-center">
-              <h5 class="card-title">Maça Fuji</h5>
-              <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
-            </div>
-            <div class="card-body">
-              <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
-          <div class="card d-flex align-items-center">
-            <img class="card-img-top" src="img\apple.png" alt="Card image cap">
-            <div class="card-body text-center">
-              <h5 class="card-title">Maça Fuji</h5>
-              <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
-            </div>
-            <div class="card-body">
-              <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
-          <div class="card d-flex align-items-center">
-            <img class="card-img-top" src="img\apple.png" alt="Card image cap">
-            <div class="card-body text-center">
-              <h5 class="card-title">Maça Fuji</h5>
-              <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
-            </div>
-            <div class="card-body">
-              <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
-          <div class="card d-flex align-items-center">
-            <img class="card-img-top" src="img\apple.png" alt="Card image cap">
-            <div class="card-body text-center">
-              <h5 class="card-title">Maça Fuji</h5>
-              <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
-            </div>
-            <div class="card-body">
-              <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
-          <div class="card d-flex align-items-center">
-            <img class="card-img-top" src="img\apple.png" alt="Card image cap">
-            <div class="card-body text-center">
-              <h5 class="card-title">Maça Fuji</h5>
-              <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
-            </div>
-            <div class="card-body">
-              <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
-          <div class="card d-flex align-items-center">
-            <img class="card-img-top" src="img\apple.png" alt="Card image cap">
-            <div class="card-body text-center">
-              <h5 class="card-title">Maça Fuji</h5>
-              <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
-            </div>
-            <div class="card-body">
-              <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-sm-6 col-12 flex-row d-flex align-items-center justify-content-around mt-5">
-          <div class="card d-flex align-items-center">
-            <img class="card-img-top" src="img\apple.png" alt="Card image cap">
-            <div class="card-body text-center">
-              <h5 class="card-title">Maça Fuji</h5>
-              <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
-            </div>
-            <div class="card-body">
-              <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
-            </div>
-          </div>
-        </div>
+      <div id='products' class="row mb-5 mt-4">
       </div>
     </div>
   </div>
@@ -615,6 +508,80 @@
 </div>
 
 <script>
+
+const createProductCard = (title, productPriceInfo, quantity, productImageSource, productImageAlt) => {
+  const container = document.createElement('div');
+  container.classList.add(
+    'col-xl-4', 'col-sm-6', 'col-12', 'flex-row',
+    'd-flex', 'align-items-center', 'justify-content-around', 'mt-5');
+
+  const card = document.createElement('div');
+  card.classList.add(
+    'card', 'd-flex', 'align-items-center');
+
+  const productImage = document.createElement('img');
+  productImage.classList.add('card-img-top');
+  productImage.src = productImageSource;
+  productImage.alt = productImageAlt;
+
+  const productInfo = document.createElement('div');
+  productInfo.classList.add('card-body', 'text-center');
+
+  const productTitle = document.createElement('h5');
+  productTitle.classList.add('card-title');
+  productTitle.innerText = title;
+  
+  const priceInfo = document.createElement('p');
+  priceInfo.classList.add('card-text', 'price', 'mt-4');
+
+  const productPrice = document.createElement('strong');
+  productPrice.innerText = productPriceInfo;
+
+  const productQuantity = document.createElement('p');
+  productQuantity.innerText = quantity;
+
+  const buttonContainer = document.createElement('div');
+  buttonContainer.classList.add('card-body');
+
+  const buttonLabel = document.createElement('p');
+  buttonLabel.classList.add('card-link');
+  buttonLabel.onclick = () => openProductInfoModal(title, productImageSource, productPriceInfo, quantity); 
+
+  const buttonText = document.createElement('strong');
+  buttonText.innerText = 'ADICIONAR AO CARRINHO';
+
+  buttonLabel.appendChild(buttonText);
+  priceInfo.appendChild(productPrice);
+  priceInfo.appendChild(productQuantity);
+  productInfo.appendChild(productTitle);
+  productInfo.appendChild(priceInfo);
+  buttonContainer.appendChild(buttonLabel);
+  card.appendChild(productImage);
+  card.appendChild(productInfo);
+  card.appendChild(buttonContainer);
+  container.appendChild(card);
+
+  return container;
+};
+
+const loadProducts = async () => {
+
+  const response = await apiGET('/product');
+ 
+  if (response.status) {
+    const products = document.getElementById('products');
+    for (let productId in response.products) {
+      let productCard = createProductCard(
+        response.products[productId].name,
+              `R$ ${response.products[productId].price.toString().replace('.', ',')}/Kg`,
+        'Compra a cada 500g',
+        response.products[productId].image,
+        response.products[productId].name);
+      products.appendChild(productCard);
+    }
+  }
+};
+
 window.onload = function () {
   const user = localStorage.getItem("efruit:user");
 
@@ -624,6 +591,8 @@ window.onload = function () {
   else {
     localStorage.setItem('cart', JSON.stringify({}));
   }
+
+  loadProducts();
 
   // test only
   const parsedUser = JSON.parse(user);
@@ -669,7 +638,18 @@ modalBackground.onclick = (e) => {
   modal.style.visibility = 'hidden';
 };
 
-const openProductInfoModal = () => {
+const openProductInfoModal = (productName, imgSrc, price, weight) => {
+
+  const modalProductImage = document.getElementById('modal-product-img');
+  modalProductImage.src = imgSrc;
+
+  const modalProductName = document.getElementById('product-name');
+  modalProductName.innerText = productName;
+
+  const modalProductPrice = document.getElementById('price-kg');
+  modalProductPrice.innerText = price;
+  const modalProductWeight = document.getElementById('weight');
+  modalProductWeight.innerText = weight;
 
   const modalBackground = document.getElementById('modal-background');
   const modal = document.getElementById('modal');
